Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-6112

[C++ broker] Incoming QMF objects dont update "transfers" counter

    XMLWordPrintableJSON

Details

    Description

      QMF Incoming objects (for AMQP 1.0 incoming links) don't update "transfers" counter any time, regardless of number of messages delivered or settled via the relevant link.

      Version-Release number of selected component (if applicable):
      any (checked today's upstream)

      How reproducible:
      100%

      Steps to Reproduce:
      1. run qpidd with traces on
      2. qpid-send -a "myQueue;

      {create:always}

      " -m 1000 --connection-option "

      {protocol:amqp1.0}

      " --capacity=10
      3. grep incoming: <logfile> | grep transfers:

      Actual results:
      transfers:0

      Expected results:
      transfers:1000

      Attachments

        Activity

          People

            pmoravec Pavel Moravec
            pmoravec Pavel Moravec
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: