QPID-6112: Incoming QMF objects dont update transfers counter

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@1626808 13f79535-47bb-0310-9956-ffa450edef68